Fixed footer column-2 items overflowing container on big desktop devices

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -7,6 +7,8 @@ $color-white: #fff;
 $color-light-grey: #F6F6F6;
 $color-light-grey-2: #ABABAB;
 
+
+$breakpoint-big-desktop: 125em; // 2000px
 $breakpoint-largest: 75em; // 1200px;
 $breakpoint-large: 62.5em; // 1000px
 $breakpoint-medium: 56.25em; // 900px
